# git_blog_generation_crew

./: README.md  app.py  pyproject.toml  report.md  test.py
src/blow_generation_crew/: crew.py  main.py
src/blow_generation_crew/config/: agents.yaml  tasks.yaml
