[project]
name = "blow_generation_crew"
version = "0.1.0"
description = "blow-generation-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.2",
]

[project.scripts]
blow_generation_crew = "blow_generation_crew.main:run"
run_crew = "blow_generation_crew.main:run"
train = "blow_generation_crew.main:train"
replay = "blow_generation_crew.main:replay"
test = "blow_generation_crew.main:test"
run_with_trigger = "blow_generation_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
